[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plormber"
version = "0.0.1"
authors = [
  { name="elttam", email="hello@elttam.com" },
]
description = "Tool and SDK for exploiting time-based ORM Leak vulns"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
plormber = "plormber.cli.run:main"
